feat(Purchase): refactor PurchaseDetailServiceTest to use DetailPurchaseRequestDTO and improve validation checks